Adding updates style fixes.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
 body{
+  color: #40514E;
 margin: 0;
 text-align: center;
 font-family: 'Merriweather', serif;
@@ -21,14 +22,20 @@ h3{
 }
 a{
    color: #11999E;
+   margin-right: 3rem;
+   text-decoration: none;
+}
+a:hover{
+  color: #e3f6f5;
 }
 hr{
-  width: 3rem;;
-  border-style: dotted;
-  border-top: 0;
-  border-width: 7px;
-  border-color: #dbdbdb;
-  margin: 80px auto 80px auto;;
+  border: dotted #dbdbdb 6px;
+  border-bottom: none;
+  margin: 100px auto;
+  width: 4%;
+}
+p{
+    line-height: 2;
 }
 .top-container{
   background-color: #ccf2f4;
@@ -41,34 +48,31 @@ padding: 50px 0 0 0;
 }
 .bottom-container{
     background-color: #66BFBF;
-    padding: 50px 0 50px 0;
+    padding: 50px 0 20px;
     line-height: 2;
 }
 .pro{
   text-decoration: underline;
 }
-.profile-description{
+.intro{
   width: 30%;
-  margin: 50px auto 50px auto;
-  text-align: center;
-  line-height: 2;
+  margin: auto;
 }
 
 .top-cloud{
   position: absolute;
   right: 300px;
-  top: 50px;
+  top: 40px;
 }
 .bottom-cloud{
   position: absolute;
-  left: 300px;
+  left: 250px;
   bottom: 300px;
 }
 .skill-row{
   width: 50%;
   margin: 100px auto 100px auto;
   text-align: left;
-  line-height: 2;
 }
 .code-img{
   width: 25%;
@@ -82,26 +86,22 @@ padding: 50px 0 0 0;
 }
 .contact-me-text{
   width: 40%;
-  margin: 40px auto 40px auto;
-  text-align: center;
-  line-height: 2;
+  margin: 40px auto 60px;
 }
 .copyright{
   color: #EAF6F6;
-}
-.footer-link{
-  color: #11999E;
-  margin-right: 3rem;
+  font-size: 0.8rem;
+  padding: 20px 0;
 }
 .btn {
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    border-radius: 10px;
    color: #FFFFFF;
-   font-family: Verdana;
+   font-family: 'Montserrat', sans-serif;
    font-size: 20px;
    font-weight: 100;
-   padding: 21px;
+   padding: 16px;
    background-color: #66BFBF;
    -webkit-box-shadow: 0 0 5px 0 #A6CBCF;
    -moz-box-shadow: 0 0 5px 0 #A6CBCF;
@@ -112,7 +112,7 @@ padding: 50px 0 0 0;
    display: inline-block;
    cursor: pointer;
    text-align: center;
-   margin: auto auto 50px auto;
+   margin: auto auto 80px auto;
 }
 
 .btn:hover {
